--- a/game.html
+++ b/game.html
@@ -24,8 +24,15 @@
 
 		</div>
 
+		<div class="scoreboard" id="sb" >
+			score
+		</div>
+		<div class="PlayersName" id="pn">
+			name 
+		</div>
 
-		<div id="player" class="character stand down">
+
+		<div id="player" class="character sta3nd down">
 			<div class="head">
 			</div>
 
@@ -36,10 +43,7 @@
 			</div>
 		</div>
 
-		</div>
-
 		
-
 
 	</body>
 </html>
