--- a/game.html
+++ b/game.html
@@ -8,11 +8,11 @@
 
 	<body>
 
-		<div class="hud">
+		<div class="hud" >
 			<ul class="health">
-				<li></li>
-				<li></li>
-				<li></li>
+				<li id="one"></li>
+				<li id="two"></li>
+				<li id="three"></li>
 			</ul>
 		</div>
 
