Best version so far

--- a/game.html
+++ b/game.html
@@ -30,6 +30,9 @@
 		<div class="PlayersName" id="pn">
 		name
 		</div>
+		<div class="Finalscoreboard">
+			
+		</div>
 
 
 		<div id="player" class="character sta3nd down">
@@ -42,6 +45,8 @@
 			<div class="weapon bow">
 			</div>
 		</div>
+
+		
 
 		
 
